[gd_scene load_steps=5 format=3 uid="uid://tfr5aen1tpy"]

[ext_resource type="Script" path="res://Scenes/UI/ExpeditionBagPopUp.gd" id="1_3s8g6"]
[ext_resource type="Texture2D" uid="uid://dvqdpng0m7mq5" path="res://Assets/Sprites/Alchemy/Brew_cauldron_liquid.png" id="1_rq5nh"]
[ext_resource type="Texture2D" uid="uid://ba76spmhrib31" path="res://Assets/Sprites/UI/drawer_open.png" id="2_vxn3b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0j2ho"]

[node name="ExpeditionBagPopUp" type="Control" node_paths=PackedStringArray("PotionTexture")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3s8g6")
PotionTexture = NodePath("PanelContainer/Bag/Potion Slot/MarginContainer/TextureRect")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 303.0
offset_bottom = 301.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_0j2ho")

[node name="Bag" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_rq5nh")

[node name="Potion Slot" type="TextureRect" parent="PanelContainer/Bag"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -40.5
offset_right = 46.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vxn3b")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Bag/Potion Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Bag/Potion Slot/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/Bag"]
layout_mode = 0
offset_right = 321.0
offset_bottom = 297.0
flat = true

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="pressed" from="PanelContainer/Bag/Button" to="." method="_on_button_pressed"]
